api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-api-deployment
  labels:
    app: task-manager-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager-api
  template:
    metadata:
      labels:
        app: task-manager-api
    spec:
      containers:
      - name: api
        image: task-manager-api:v1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
