api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-manager-api
  labels:
    app:  task-manager-api
spec:
  containers:
  - name: api
    image: task-manager-api:v1.0.0
    imagePullPolicy: Never
    ports:
    - containerPort: 3000
