api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-api
  labels:
    app: task-manager-api
spec:
  selector:
    app:  task-manager-api
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
